test/field/get_on_string.lox
"str".foo // error: only instances have field
